--- a/index.html
+++ b/index.html
@@ -1,96 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html style="height:100%;">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>div width resize</title>
-<!--引用jquery-->
-<script src="http://code.jquery.com/jquery-1.8.0.min.js" type="text/javascript"></script>
-<script type="text/javascript">
-function bindResize (el){
-    //初始化参数
-    var els = document.getElementById('menu').style;
-    //鼠标的 X 和 Y 轴坐标
-    x = 0;
-    //邪恶的食指
-    $(el).mousedown(function (e){
-        //按下元素后，计算当前鼠标与对象计算后的坐标
-        x = e.clientX - el.offsetWidth - $("#menu").width();
-        //在支持 setCapture 做些东东
-        
-        el.setCapture ? (
-            //捕捉焦点
-            el.setCapture(),      
-            //设置事件
-            el.onmousemove = function (ev){
-                mouseMove(ev || event);
-            },
-            el.onmouseup = mouseUp
-        ) : (
-            //绑定事件
-            $(document).bind("mousemove", mouseMove).bind("mouseup", mouseUp)
-        );
-            //防止默认事件发生
-            e.preventDefault();
-    });
-    //移动事件
-    function mouseMove(e)
-    {
-        //宇宙超级无敌运算中...
-        els.width = e.clientX - x + 'px';
-    }
-    //停止事件
-    function mouseUp()
-    {
-        //在支持 releaseCapture 做些东东
-        el.releaseCapture ? (
-            //释放焦点
-            el.releaseCapture(),
-            //移除事件
-            el.onmousemove = el.onmouseup = null
-        ) : (
-            //卸载事件
-            $(document).unbind("mousemove", mouseMove).unbind("mouseup", mouseUp)
-        );
-    }
-}
-var divResize=function (){
-    var totalHeight=$("html").height();
-    console.log(totalHeight);
-    var topHeight=$("#top").height()
-    $("#menu").height(totalHeight-topHeight);
-    $("#rightbar").height(totalHeight-topHeight);
-
-    console.log($("#rightbar").height());
-}
-$(function() {
-    divResize();
-    console.log($(window));
-    $(window).resize(divResize);
-    
-    bindResize(document.getElementById('rightbar'));
-});
-</script>
-<style type="text/css">
-.content {
-width: 200px;
-background: #f1f1f1;
-text-align: center;
-border-color: #CCCCCC;
-border-style: solid;
-border-width: 0 1px;
-}
-</style>
-</head>
-<body style="padding: 0; margin: 0;">
-<div style="width: 800px; margin: 0 auto;">
-    <div id="top" style="width: 100%; height: 80px;"></div>
-    <div style="float: left;max-width: 800px;" id="menu" class="content">
-        <span>待拖拽的div</span>
-    </div>
-    <div id="rightbar" style="width: 2px; background: #cccccc; cursor: e-resize; float: left;"></div>
-</div>
-<div id="right">
-右边的div
-</div>
-</body>
-</html> 
+<!DOCTYPE html><html lang=en><head><meta http-equiv=X-UA-Compatible content="IE=edge"><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"><link rel=icon href=./static/icon/favicon.ico><title>trave</title><link href=./static/css/app.6fc376fe9c38d6c0ee5e60d69d46beff.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.7882b2484fc4ea0c005d.js></script><script type=text/javascript src=./static/js/app.581d406af728d940d606.js></script></body></html>
